// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render close ModalInfo correctly 1`] = `
<Modal
  appElement={null}
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="Confirmation Modal"
  isOpen={false}
  onRequestClose={[MockFunction]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="modal__body"
  >
    <button
      className="modal__close"
      onClick={[MockFunction]}
    />
    <h3
      className="modal__title"
    >
      Please check Your email. We send you a letter.
    </h3>
    <button
      className="button removeExpense"
      onClick={[MockFunction]}
    >
      Ok
    </button>
  </div>
</Modal>
`;

exports[`should render open ConfirmModal correctly 1`] = `
<Modal
  appElement={null}
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="Confirmation Modal"
  isOpen={true}
  onRequestClose={[MockFunction]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="modal__body"
  >
    <button
      className="modal__close"
      onClick={[MockFunction]}
    />
    <h3
      className="modal__title"
    >
      Please check Your email. We send you a letter.
    </h3>
    <button
      className="button removeExpense"
      onClick={[MockFunction]}
    >
      Ok
    </button>
  </div>
</Modal>
`;
